avishay changes